Sat Oct 21 15:03:06 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in (CONFIG_DIRS): Add config-files to list of
	directories. 

Wed Oct 11 17:23:45 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in: For all platforms, set krb5_cv_shlibs_versioned_filenames; no for AIX, yes for all others

	* aclocal.m4 (v5_make_shlib): Add ability not to make versioned archive files for AIX

Tue Oct 10 21:43:15 1995  Theodore Y. Ts'o  <tytso@dcl>

	* wconfig.c: Use win-post.in instead of post.in.

Mon Oct  9 18:58:34 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: For NetBSD turn back on shlibs_use_dirs

Fri Oct  6 00:57:25 1995  Theodore Y. Ts'o  <tytso@dcl>

	* wconfig.c: Include the file windows.in instead of pre.in

	* Makefile.in (ekrbsrc.mac): Build the list of files *after*
		building files using awk-windows-mac.

Sat Sep 30 04:34:51 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* aclocal.m4 (DO_SUBDIRS): Add make Makefiles for broken versions
			of make.
		     (V5_MAKE_SHARED_LIB): Changes to support version
		     	     numbering and library installation.

	* configure.in: change shlib extentsion for netbsd and dirhead
		rules to allow for shared library path to be included in
		executable. 

Fri Sep 29 01:39:35 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (awk-windows-mac): Copy stock/osconf.h to osconf.h
		in include/krb5, and clean it up when we're done building
		the distribution.

Thu Sep 28 16:00:00 1995  John Rivlin  <jrivlin@fusion.com>

	* Makefile.in: Added mac/gss-sample to tar file.

Wed Sep 27 00:53:08 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Add config/windows.in to the beginning of the
		Makefile.in when we're building the Makefile.

	* Makefile.in: New scheme for building DOS and Macintosh
		distribution files; much more forgiving of random cruft in
		the source tree.

Wed Sep 27 16:00:00 1995  John Rivlin  <jrivlin@fusion.com>

	* Makefile.in: Temporarily move autoconf.h file to include