@@ -45,13 +45,13 @@ krb5_cv_shlibs_versioned_filenames=yes # version in filename of library
 	krb5_cv_shlibs_cflags=-fPIC
 	krb5_cv_shlibs_ext=so
 	krb5_cv_noshlibs_ext=a
-krb5_cv_shlibs_versioned_filenames=yes
+	krb5_cv_shlibs_versioned_filenames=yes
 	krb5_cv_shlibs_need_nover=yes
 	krb5_cv_shlibs_dir=shared
-	krb5_cv_shlibs_ldflag="-dy"
-	krb5_cv_noshlibs_ldflag="-dn"
+	krb5_cv_shlibs_ldflag=
+	krb5_cv_noshlibs_ldflag="-static"
 	krb5_cv_shlibs_sym_ufo="-u "
-	krb5_cv_shlibs_dirhead="-R "
+	krb5_cv_shlibs_dirhead="-Wl,-rpath -Wl,"
 	krb5_cv_exe_need_dirs=yes
 	krb5_cv_shlibs_use_dirs=yes
 	krb5_cv_shlibs_use_colon_dirs=no
