@@ -1,3 +1,7 @@
+Thu Nov  2 17:05:05 1995    <tytso@rsx-11.mit.edu>
+
+	* makeshlib.sh: Added support for Linux shared libraries.
+
 Wed Oct 11 17:21:16 1995  Sam Hartman  <hartmans@tertius.mit.edu>
 
 	* makeshlib.sh:  bring in library version and do something with it for AIX.
