@@ -1,3 +1,7 @@
+Thu Nov  2 16:57:45 1995    <tytso@rsx-11.mit.edu>
+
+	* configure.in: Added support for Linux shared libraries.
+
 Sat Oct 21 15:03:06 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* configure.in (CONFIG_DIRS): Add config-files to list of
